@@ -1,6 +1,6 @@
 [general]
 description = ebrisk
-calculation_mode = ebrisk
+calculation_mode = event_based_risk
 master_seed = 42
 
 [boundaries]
@@ -41,4 +41,4 @@ maximum_distance = 200.0
 investigation_time = 1
 number_of_logic_tree_samples = 0
 ses_per_logic_tree_path = 200
-ground_motion_fields = true
+ground_motion_fields = false
