@@ -1,6 +1,6 @@
 [general]
 description = ebrisk with aggregation by NAME_1
-calculation_mode = ebrisk
+calculation_mode = event_based_risk
 exposure_file = exposure_model.xml
 aggregate_by = NAME_1
 
@@ -33,3 +33,4 @@ investigation_time = 1
 number_of_logic_tree_samples = 0
 ses_per_logic_tree_path = 2000
 conditional_loss_poes = .01
+ground_motion_fields = false
