@@ -1,7 +1,7 @@
 [general]
 
 description = Virtual Island - City C, 2 SES, grid=0.1
-calculation_mode = ebrisk
+calculation_mode = event_based_risk
 random_seed = 1024
 ignore_master_seed = true
 
@@ -52,7 +52,7 @@ ses_per_logic_tree_path = 2
 export_dir = /tmp
 # post-process ground motion fields into hazard curves,
 # given the specified `intensity_measure_types_and_levels`
-hazard_curves_from_gmfs = false
+ground_motion_fields = false
 mean = false
 # quantiles = 0.15, 0.5, 0.85
 poes = 0.1, 0.01, 0.02
