@@ -1,7 +1,8 @@
 [general]
 
 description = Virtual Island Risk with amplification
-calculation_mode = ebrisk
+calculation_mode = event_based_risk
+ground_motion_fields = false
 
 [calculation]
 
